--- a/modules/artifact-activation/pom.xml
+++ b/modules/artifact-activation/pom.xml
@@ -30,6 +30,11 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.mule</groupId>
+            <artifactId>mule-maven-parser-impl</artifactId>
+            <version>1.8.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.mule.runtime</groupId>
             <artifactId>mule-module-artifact</artifactId>
             <version>${project.version}</version>
